Days left works

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,23 +8,34 @@
 </header>
 
 <body>
+    <!-- Routes have not been made yet -->
     <nav class="nav-bar">
         <ol>
-            <!-- Routes have not been made yet -->
+            
             <li><a href="/bot"></a>Character Bot</a></li>
             <li><a href="/where-are-they-now">Where Are They Now?</a></li>
             <li><a href="/clips">Non-stop Seinfeld Clips</a></li>
             <li><a href="food-locator">SeinFood Locator</a></li>
         </ol>
     </nav>
+    <div class="countdown">
+        <h3>Festivus is December 23rd!</h3>
+            <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
+    </div>
 
-<h3>Festivus is December 23rd!</h3>
-<p>Mark your calendar</p>
+    <div class="bot-chat">
+        <h3>Chat with a Seinfeld character bot!</h3>
+            <p>Pick a character from the show to have an instant-message conversation with.</p>
+        <form>
+
+        </form>
+
+    </div>
 
 </body>
 
 <footer>
-    <p>You are the XXXXX visitor to the site!</p>
+    <p>You are the visitor to the site!</p>
     <p>Sam Gerrity Industries 2021</p>
 </footer>
 
