--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,10 +28,11 @@
             <p>Pick a character from the show to have an instant-message conversation with.</p>
             <form action="/">     
                 <select name="character-bot">
-                    <option value="jerry">Jerry</option>
-                    <option value="elaine">Elaine</option>
-                    <option value="kramer">Kramer</option>
-                    <option value="george">George</option>
+                    <option value="no_selection" id="0">Choose a name</option>
+                    <option value="jerry" name="1">Jerry</option>
+                    <option value="george" id="2">George</option>
+                    <option value="elaine" id="3">Elaine</option>
+                    <option value="kramer" id="4">Kramer</option>
                 </select><br>
                 <p>Make up a username for your chat.</p>
                     <label for="username">Username:</label>
@@ -43,7 +44,8 @@
                 <!-- next area should print the users input and show the bots response-->
             <div class="transcript">
                 <h4>Message log:</h4><br>
-                <p id="user-message">  {{ username }}: {{ message }} </p>
+                <p id="user-message">{{ username }}: {{ message }}</p><br>
+                <p id="bot-message">{{ bot_name }}: {{ bot_message }}</p><br>
             </div>
                 <!-- move on to other features -->
             <div class="watn">
