Username & message saved in session

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -44,9 +44,14 @@
                 <!-- next area should print the users input and show the bots response-->
             <div class="transcript">
                 <h4>Message log:</h4><br>
-                <p id="user-message">{{ username }}: {{ message }}</p><br>
+                <p id="user-message">{{ user_name }}: {{ message }}</p><br>
                 <p id="bot-message">{{ bot_message }}</p><br>
             </div>
+
+
+
+
+
                 <!-- move on to other features -->
             <div class="watn">
                 <h3 id="watn-header">Where Are They Now?</h3>
