--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -45,7 +45,7 @@
             <div class="transcript">
                 <h4>Message log:</h4><br>
                 <p id="user-message">{{ user_name }}: {{ message }}</p><br>
-                <p id="bot-message">{{ bot_message }}</p><br>
+                <p id="bot-message">{{ bot_name }}: {{ bot_message }}</p><br>
             </div>
 
 
