--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,81 +2,93 @@
 <html>
     <head>
         <title>The Ultimate Seinfeld Experience</title>
-
-   
     </head>
-<header class="page-header">
-    <h1>The Ultimate Seinfeld Experience </h1>
-</header>
 
-<body>
-    <nav class="nav-bar">
-        <ol>
-            <li><a href="#festivus-countdown">Festivus Countdown</a></li>
-            <li><a href="#bot-chat">Character Bot</a></li>
-            <li><a href="#watn-header">Where Are They Now?</a></li>
-            <li><a href="food-locator">SeinFood Locator</a></li>
-        </ol>
-    </nav>
-    <div class="countdown">
-        <h3 id="festivus-countdown">Festivus is December 23rd!</h3>
-            <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
-    </div>
 
-    <div class="bot-chat">
-        <h3 id="bot-chat">Chat with a Seinfeld character bot!</h3>
-            <p>Pick a character from the show to have an instant-message conversation with.</p>
-            <form action="/">     
-                <select name="character-bot">
-                    <option value="Jerry" selected>Jerry</option>
-                    <option value="George">George</option>
-                    <option value="Elaine">Elaine</option>
-                    <option value="Kramer">Kramer</option>
-                        {% if session['botname'] != None %}
-                    <option value="{{ bot_name }}" selected>{{ bot_name }}</option>
-                    {% endif %}
-                </select><br>
-                <p>Make up a username for your chat.</p>
-                    <label for="username">Username:</label>
-                    <input type="username" id="username" name ="username" placeholder="mrskramer"><br><br>
-                        <textarea rows="3" cols="30" name="user-input" id=#user-input>
-                        </textarea><br>
-                            <input type="submit" value="submit" id="button"><br>
-            </form>        
-                <!-- next area should print the users input and show the bots response-->
-            <div class="transcript">
-                <h4>Message log:</h4><br>
+    <header class="page-header">
+        <h1>The Ultimate Seinfeld Experience </h1>
+    </header>
+
+
+
+    <body>
+        <nav class="nav-bar">
+            <ol>
+                <li><a href="#festivus-countdown">Festivus Countdown</a></li>
+                <li><a href="#bot-chat">Character Bot</a></li>
+                <li><a href="/where-are-they-now">Where Are They Now?</a></li>
+                <li><a href="food-locator">SeinFood Locator</a></li>
+            </ol>
+        </nav>
+
+
+
+        <div class="countdown">
+            <h3 id="festivus-countdown">Festivus is December 23rd!</h3>
+                <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
+        </div>
+
+
+
+        <div class="bot-chat">
+            <h3 id="bot-chat">Chat with a Seinfeld character bot!</h3>
+                <p>Pick a character from the show to have an instant-message conversation with.</p>
+                <form action="/">     
+                    <select name="character-bot">
+                        <option value="Jerry" selected>Jerry</option>
+                        <option value="George">George</option>
+                        <option value="Elaine">Elaine</option>
+                        <option value="Kramer">Kramer</option>
+                            {% if session['botname'] != None %}
+                        <option value="{{ bot_name }}" selected>{{ bot_name }}</option>
+                        
+                        {% endif %}
+                    </select><br>
+                    <p>Make up a username for your chat.</p>
+                        <label for="username">Username:</label>
+                        <input type="username" id="username" name ="username" placeholder="mrskramer"><br><br>
+                            <textarea rows="3" cols="30" name="user-input" id=#user-input>
+                            </textarea><br>
+                                <input type="submit" value="submit" id="button"><br>
+                </form>
                 
-                {% for i in range(user_messages|length) %}
-                            <p id="user-line">{{ user_name }}: {{ user_messages[i] }}</p><br>
-                            <p id="bot-line">{{ bot_name }}: {{ bot_responses[i] }}</p><br>     
-                            
-
-                {% endfor %}
                 
-            </div>
-             
+                <div class="transcript">
+                    <h4>Message log:</h4><br>
+                    <!-- for how many messages are saved in the session, show that many messages with
+                    a bot response-->
+                
+                    <!-- user_messages session holds "None" in session upon load, making len=1-->
+                    {% for i in range(user_messages|length) %}
+                        
+                        {% if user_messages[i+1] %}<p id="user-line">{{ user_name }}: {{ user_messages[i+1] }}</p><br>
+                        {% if bot_responses[i] %}<p id="bot-line">{{ bot_name }}: {{ bot_responses[i] }}</p><br>{% endif %}{% endif %}
+                
 
 
-                <!-- move on to other features -->
-            <div class="watn">
-                <h3 id="watn-header">Where Are They Now?</h3>
-                <p>Check out what some of the actors on the show are up to lately.</p>
-                <a href="https://twitter.com/jerryseinfeld">Jerry Seinfeld</a><br>
-                <a href="https://twitter.com/officialjld?lang=en">Julia Louis-Dreyfus</a><br>
-                <a href="https://twitter.com/IJasonAlexander?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Jason Alexander</a><br>
-                <a href="https://twitter.com/modern_seinfeld?lang=en">Modern Seinfeld: A take on how episodes might have gone in the 2010's</a><br>
-            </div>
-     
- <script src="/static/js/action.js"></script>
-</body>
+                    {% endfor %}
+                
+                </div>
+                
 
-<footer>
-    <p>You are the {{ counter }} visitor to the site!</p>
-    <!-- found hit counter online -->
-    <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
-    <p>Sam Gerrity Industries 2021</p>
-</footer>
+                <div class="watn">
+                    <h3 id="watn-header">Where Are They Now?</h3>
+                    <p>Check out what some of the actors on the show are up to lately.</p>
+                    <a href="https://twitter.com/jerryseinfeld">Jerry Seinfeld</a><br>
+                    <a href="https://twitter.com/officialjld?lang=en">Julia Louis-Dreyfus</a><br>
+                    <a href="https://twitter.com/IJasonAlexander?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Jason Alexander</a><br>
+                    <a href="https://twitter.com/modern_seinfeld?lang=en">Modern Seinfeld: A take on how episodes might have gone in the 2010's</a><br>
+                </div>
+        
+    <script src="/static/js/action.js"></script>
+    </body>
+
+    <footer>
+        <p>You are the {{ counter }} visitor to the site!</p>
+        <!-- found hit counter online -->
+        <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
+        <p>Sam Gerrity Industries 2021</p>
+    </footer>
  
 
 </html>
