--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="nav-bar">
             <ol>
-                <li><a href="/#festivus-countdown">Festivus Countdown</a></li>
+                <li><a href="/">Home Page</a></li>
                 <li><a href="/#bot-chat">Character Bot</a></li>
                 <li><a href="/">SeinFood Locator</a></li>
             </ol>
