Jerry's Tweitter date & text for-loop to the DOM done

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -65,7 +65,7 @@
 
 
                     {% endfor %}
-                
+                        <button type="button">End Chat</button>
                 </div>
                 
 
