--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -31,7 +31,7 @@
             <h4>Twitter handle: <a href="https://twitter.com/jerryseinfeld">@jerryseinfeld</a></h4><br>
             <p>Last 5 tweets</p>
             {% for i in range(jerry_tweet_dates|length) %}
-            <p>{{ jerry_tweet_dates[i] }}: {{ jerry_tweets[i] }}</p>
+            <p><strong>{{ jerry_tweet_dates[i] }}: </strong>{{ jerry_tweets[i] }} <strong>Likes: </strong>{{ jerry_likes[i] }}</p>
             {% endfor %}
         </div>
 
@@ -63,10 +63,6 @@
             <p>{{ tweet }}</p>
             {% endfor %}
         </div>
-
-
-
-
 
     </body>
 
