--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,13 +34,12 @@
                 <p>Pick a character from the show to have an instant-message conversation with.</p>
                 <form action="/">     
                     <select name="character-bot">
-                        <option value="Jerry" selected>Jerry</option>
-                        <option value="George">George</option>
-                        <option value="Elaine">Elaine</option>
-                        <option value="Kramer">Kramer</option>
-                            {% if session['botname'] != None %}
-                        <option value="{{ bot_name }}" selected>{{ bot_name }}</option>
-                        {% endif %}
+                        <!-- the character who was sent a chat is automaticallt selected for the next message in session -->
+                        <option value="Jerry"{% if bot_name == 'Jerry' %} selected{% endif %}>Jerry</option>
+                        <option value="George"{% if bot_name == 'George' %}selected{% endif %}>George</option>
+                        <option value="Elaine"{% if bot_name == 'Elaine' %}selected{% endif %}>Elaine</option>
+                        <option value="Kramer"{% if bot_name == 'Kramer' %}selected{% endif %}>Kramer</option>
+
                     </select><br>
                     <p>Make up a username for your chat.</p>
                         <label for="username">Username:</label>
@@ -61,8 +60,6 @@
                         
                         {% if user_messages[i+1] %}<p id="user-line">{{ user_name }}: {{ user_messages[i+1] }}</p><br>
                         {% if bot_responses[i] %}<p id="bot-line">{{ bot_name }}: {{ bot_responses[i] }}</p><br>{% endif %}{% endif %}
-                
-
 
                     {% endfor %}
                         <button type="button">End Chat</button>
