Seinfood class in Model.py

--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -49,6 +49,7 @@
                         <li>Babka</li>
                         <li>Soup</li>
                         <li>Muffins</li>
+                        <li>Calzones</li>
                     </ul>
                 <h3>Places: </h3>
                 <ol>
