Search food categories by parameter loop. Displays name and location on page.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,7 +16,7 @@
             <ol>
                 <li><a href="#bot-chat">Character Bot</a></li>
                 <li><a href="/where-are-they-now">Where Are They Now?</a></li>
-                <li><a href="food-locator">SeinFood Locator</a></li>
+                <li><a href="/food-locator">SeinFood Locator</a></li>
             </ol>
         </nav>
 
