--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -52,9 +52,11 @@
                         <li>Calzones</li>
                     </ul>
                 <h3>Places: </h3>
-                <ol>
-                    <li></li>
-                </ol>
+                <ul>
+                {% for i in range(0, list_of_businesses|length, 2) %}
+                    <li>{{ list_of_businesses[i] }}: {{ list_of_businesses[i+1] }}</li>
+                {% endfor %}
+                </ul>
             </div>
 
 
