--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -14,7 +14,7 @@
             <ol>
                 <li><a href="/">Home Page</a></li>
                 <li><a href="/#bot-chat">Character Bot</a></li>
-                <li><a href="/">SeinFood Locator</a></li>
+                <li><a href="/food-locator">SeinFood Locator</a></li>
             </ol>
         </nav>
 
