Query for active food categories (not hard coated)

--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -50,6 +50,7 @@
                         <li>Soup</li>
                         <li>Muffins</li>
                         <li>Calzones</li>
+                        <li>Mutton</li>
                     </ul>
                 <h3>Places: </h3>
                 <ul>
