--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -27,46 +27,27 @@
 
         <div class="food-locate-form">
             <h3>Dine Like the Characters!</h3>
-                <form action="/seinfood">
-                    <label name="zip-code">Your zip code: </label>
-                    <!-- Zip code field is numbers only, 5 char min-max limit-->
-                        <input type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}" maxlength="5">
-                            <text name="zip-user-input" id="zip-user-input">
-                            </text>
-                                <p><em>* 10 mile radius</em></p><br>
-                                <input type="submit" value="submit" id="button"><br>
-                        </form>
-            </div>
-
-            <div class="food-results">
-                <h3>Categories searched: </h3>
-                    <ul>
-                        <li>Diners</li>
-                        <li>Chinese Restaurants</li>
-                        <li>Pakistani Restaurants</li>
-                        <li>Produce Markets</li>
-                        <li>Marble Rye</li>
-                        <li>Babka</li>
-                        <li>Soup</li>
-                        <li>Muffins</li>
-                        <li>Calzones</li>
-                        <li>Mutton</li>
-                    </ul>
-                <h3>Places: </h3>
-                <ul>
+            <form action="/zip-code">
+                <label name="zip-code">Your zip code: </label>
+                <!-- Zip code field is numbers only, 5 char min-max limit-->
+                <input type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}" maxlength="5">
+                <text name="zip-user-input" id="zip-user-input"></text>
+                        
+                <p><em>* 10 mile radius</em></p><br>
+                <input type="submit" value="submit" id="button"><br>
+            </form>
+        </div>
+        {% if zip_code_search %}
+        <div class="food-results">
+            <h3>Places: </h3>
+            <ul>
                
-                    {% for key, value in dict_of_businesses.items() %}
-                        <li>{{ key }}: {% for item in value %}{{ item }} {% endfor %}</li>
-                    {% endfor %}
-                
-                </ul>
-            </div>
-
-
-
+            {% for key, value in dict_of_businesses.items() %}
+                <li>{{ key }}: {% for item in value %}{{ item }} {% endfor %}</li>
+            {% endfor %}
+        
+            </ul>
+        </div>
+        {% endif %}
     </body>
-
-
-
-
 </html>
