--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Seinfeld Local Cuisine</title>
+        <style>
+        #map {
+            height: 400px;
+            width: 100%;
+            background-color: grey;
+          }
+          </style>
     </head>
 
     <header class="subpage-header">
@@ -43,11 +50,17 @@
             <ul>
                
             {% for key, value in dict_of_businesses.items() %}
-                <li>{{ key[0] }}: {{ value[0] }} {{ value[1][0] }}</li>
+                <li>{{ key[0] }}: {{ value[0] }} {{ value[1][0] }}, {{ value[1][1] }}</li>
             {% endfor %}
         
             </ul>
         </div>
         {% endif %}
     </body>
+
+    <div id="map"></div>
+        <script type="text/javascript" src="static/js/sein_maps.js"></script>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap">
+        </script>
 </html>
