Festivus separate page & h1 adjusted across all templates.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,15 +17,14 @@
                 <li><a href="#bot-chat">Character Bot</a></li>
                 <li><a href="/where-are-they-now">Where Are They Now?</a></li>
                 <li><a href="/food-locator">SeinFood Locator</a></li>
+                <li><a href="/festivus">Festivus Countdown</a></li>
+
             </ol>
         </nav>
 
 
 
-        <div class="countdown">
-            <h3 id="festivus-countdown">Festivus is December 23rd!</h3>
-            <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
-        </div>
+
 
 
         <div class="bot-chat">
