Bot chat moved off hp and into separate page; google map shows; tweet embed styling add but doesn't work

--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -3,22 +3,25 @@
     <head>
         <title>Countdown to Festivus</title>
     </head>
-    <header>
-        <h1>Festivus</h1>
+
+    <header class="subpage-header">
+        <h1>Countdown to Festivus</h1>
     </header>
+
     <body>
         <nav class="nav-bar">
             <ol>
-                <li><a href="#bot-chat">Character Bot</a></li>
+                <li><a href="/character-chat">Character Bot</a></li>
                 <li><a href="/where-are-they-now">Where Are They Now?</a></li>
                 <li><a href="/food-locator">SeinFood Locator</a></li>
                 <li><a href="/festivus">Festivus Countdown</a></li>
-
             </ol>
         </nav>
+
         <div class="countdown">
-            <h3 id="festivus-countdown">Festivus is December 23rd!</h3>
+            <h2 id="festivus-countdown">Festivus is December 23rd 2021!</h2>
             <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
         </div>
+        
     </body>
 </html>
