--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -2,18 +2,49 @@
 <html>
     <head>
         <title>Where Are They Now?</title>
+        <script>window.twttr = (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+              t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
+          
+            t._e = [];
+            t.ready = function(f) {
+              t._e.push(f);
+            };
+          
+            return t;
+          }(document, "script", "twitter-wjs"));</script>
     </head>
 
     <header class="subpage-header">
         <h1>Where Are They Now?</h1>
     </header>
 
+    <blockquote class="twitter-tweet">
+        {% for i in range(jerry_tweet_dates|length) %}
+        <!-- raw text for the tweet - not sure yet why we need this -->
+        <p lang="en" dir="ltr">
+            
+            {{ jerry_tweets[i] }}</p>
+        
+        <!-- user name and handle -->
+        &mdash; {{ twitter_username }} (@{{ twitter_handle }})
+        <!-- link to tweet with raw date of tweet -->
+        <a href="{{ tweet_expanded_url }}">{{ jerry_tweet_dates[i] }}</a> 
+      
+        <!-- js/json for embedding tweet -->
+      </blockquote> 
+        {% endfor %}
 
     <body>
         <nav class="nav-bar">
             <ol>
                 <li><a href="/">Home Page</a></li>
-                <li><a href="/#bot-chat">Character Bot</a></li>
+                <li><a href="/character-chat">Character Bot</a></li>
                 <li><a href="/food-locator">SeinFood Locator</a></li>
                 <li><a href="/festivus">Festivus Countdown</a></li>
 
@@ -27,8 +58,32 @@
                 mean the actors are sitting around doing more nothing. Some of them post on 
                 Twitter. Check out their most recent tweets.</p>
         </div>
+
+        <blockquote class="twitter-tweet">
             
-        <div class="jerry-twitter">
+            <p lang="en" dir="ltr">
+                Pleased to see the return of Robert Cumberford to 
+                
+                <a href="https://twitter.com/SportsCarMarket?ref_src=twsrc%5Etfw">
+                    @SportsCarMarket
+                </a> 
+                this month. His design analyses only surpassed by his beautifully made sentences. I could write a monthly column just about how well he writes.</p>
+                
+                &mdash; Jerry Seinfeld (@JerrySeinfeld) 
+                
+                <a href="https://twitter.com/JerrySeinfeld/status/1381608900923944963?ref_src=twsrc%5Etfw">
+                    April 12, 2021
+                </a>
+            
+            </blockquote> 
+
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+        </script>
+        
+        </blockquote> 
+
+            
+        <!-- <div class="jerry-twitter">
             <h2>Jerry Seinfeld as 'Jerry' on 'Seinfeld'</h2>
             <img src="{{ jerry_twitter_profile_image }}">
             <p>Twitter handle: <a href="https://twitter.com/jerryseinfeld">@jerryseinfeld</a></p><br>
@@ -36,7 +91,7 @@
             {% for i in range(jerry_tweet_dates|length) %}
             <p><strong>{{ jerry_tweet_dates[i] }}: </strong>{{ jerry_tweets[i] }} <strong>Likes: </strong>{{ jerry_likes[i] }}</p>
             {% endfor %}
-        </div>
+        </div> -->
 
         <div class="julia-twitter">
             <h2>Julia Louis-Dreyfus as 'Elaine' on 'Seinfeld'</h2>
@@ -69,6 +124,5 @@
             <p><strong>{{ modern_tweet_dates[i] }}: </strong>{{ modern_tweets[i] }} <strong>Likes: </strong>{{ modern_likes[i] }}</p>
             {% endfor %}
         </div>
-
     </body>
 </html>
