--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -19,7 +19,7 @@
         <nav class="nav-bar">
             <ol>
                 <li><a href="/">Home Page</a></li>
-                <li><a href="/#bot-chat">Character Bot</a></li>
+                <li><a href="/character-chat">Character Bot</a></li>
                 <li><a href="/where-are-they-now">Where Are They Now?</a></li>
                 <li><a href="/festivus">Festivus Countdown</a></li>
             </ol>
@@ -42,7 +42,9 @@
                 <text name="zip-user-input" id="zip-user-input"></text>
                         
                 <p><em>* 10 mile radius</em></p><br>
-                <input type="submit" value="submit" id="button"><br>
+                <input type="submit" value="submit" id="button">
+                <br>
+                <br>
             </form>
         </div>
         {% if zip_code_search %}
@@ -59,9 +61,10 @@
         {% endif %}
     </body>
 
-    <div id="map"></div>
+    <div id="map">
+    </div>
         <script type="text/javascript" src="static/js/sein_maps.js"></script>
         <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCsOzGOFmAJX9Os-QZTbN4C3Lm0B8qNdg&callback=initMap">
         </script>
 </html>
